--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_CONNECTION=mongodb+srv://rideShareApp:Rideshare@1@cluster0.4yctv.mongodb.net/?retryWrites=true&w=majority
+DB_CONNECTION=mongodb+srv://rideShareApp:Faizan@cluster0.4yctv.mongodb.net/?retryWrites=true&w=majority
 PORT=3000
 ACCESS_TOKEN_SECRET=some secret
 REFRESH_TOKEN_SECRET=some super secret
